# arc-leman-precip

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: terraform.yaml  wif-smoke-test.yml
infra/.github/workflows/: terraform.yaml
infra/bootstrap/: main.tf  variables.tf
infra/gcp/: backend.tf  core_apis.tf  quotas.tf  storage.tf  variables.tf  versions.tf
infra/terraform/gcp/: core_apis.tf  provider.tf
