[build-system]
requires = ["uv>=0.1"]
build-backend = "uv.backend"

[project]
name = "arc_leman_precip"
version = "0.0.1"
description = "Hourly rain forecasts for the Geneva-Lausanne corridor built on open Swiss data & serverless ML"
authors = [
  { name = "Pau Romeu", email = "romeu.pau@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# --- Runtime dependencies ---
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "black>=24.4"
]

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ["py311"]